[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/MapEditor/ClientEditor/HouseholdPanel/HouseholdPanel.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="FontFile" id=2]

[sub_resource type="FontFile" id=1]
font_data = ExtResource( 2 )

[node name="HouseholdPanel" type="HBoxContainer"]
offset_right = 333.0
theme_override_constants/separation = 0
script = ExtResource( 1 )

[node name="SocClass" type="Button" parent="."]
offset_right = 166.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 1 )
icon_alignment = 1

[node name="Delete" type="Button" parent="."]
offset_left = 166.0
offset_right = 333.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 1 )
text = "Удалить"

[connection signal="pressed" from="SocClass" to="." method="change_soc_class"]
[connection signal="pressed" from="Delete" to="." method="erase_soc_class"]
